# nvs_5_jg

./: .gitignore  .gitkeep  LICENSE
01_processes/: meson.build
01_processes/src/: aba.cpp  charout.cpp
02_threads/: meson.build
02_threads/src/: contest.cpp
03_sync1/: meson.build  meson_options.txt
03_sync1/include/: account.hpp
03_sync1/src/: account.cpp  main.cpp
04_sync2/: meson.build
04_sync2/include/: work_packet.h  work_queue.h
04_sync2/src/: loadsim.cpp  work_queue.cpp
05_sync3/: meson.build
05_sync3/include/: Philosopher.h  Semaphore.h  utils.h
05_sync3/src/: Philosopher.cpp  Semaphore.cpp  main.cpp
06_future/: meson.build  meson_options.txt
06_future/include/: InfInt.h  calc_factors.h
06_future/src/: main.cpp
07_berkeley/: meson.build
07_berkeley/include/: clock.hpp  pipe.h  timeutils.h
07_berkeley/src/: clock.cpp  main.cpp
